# anthro

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
.husky/: pre-commit
data/: day_acfa.json  day_bmi.json  day_lhfa.json  day_wfa.json  day_wfh.json  day_wfl.json  month_wfh.json
deploy/: worker.js  wrangler.toml
docs/: anthro.bundle.js  api.js  humans.txt  index.html  manifest.webmanifest  robots.txt  sitemap.xml  table_meta.json
docs/data/: day_acfa.json  month_acfa.json  month_bmi.json  month_wfl.json
python/: README.md  pyproject.toml  test_anthro.py
python/anthro/: __init__.py  anthro.py
python/anthro_who/: __init__.py  anthro.py
python/anthro_who/data/: month_lhfa.json  month_wfa.json
scripts/: export-tables.R
site/: api.js  index.html  manifest.webmanifest
src/: anthro.d.ts  anthro.js
test/: anthro.test.js
