[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anthro"
dynamic = ["version"]
description = "WHO 2006 Child Growth Standards — z-scores and classifications for 6 indicators"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = [
    "who", "child-growth", "anthropometry", "z-score",
    "stunting", "wasting", "underweight", "muac",
    "lhfa", "wfa", "wflh", "bmi", "acfa", "igrowup",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

[project.urls]
Homepage    = "https://flame-cai.github.io/anthro"
Repository  = "https://github.com/flame-cai/anthro"
"Bug Tracker" = "https://github.com/flame-cai/anthro/issues"

[tool.hatch.version]
path = "../VERSION"
pattern = "(?P<version>.+)"

[tool.hatch.build.targets.wheel]
packages = ["anthro"]

# Bundle the shared data/ tables into the wheel so it works after pip install.
# The path is relative to this pyproject.toml (i.e. python/).
[tool.hatch.build.targets.wheel.force-include]
"../data" = "anthro/data"
